deprecated/old/common_dev 2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportapp-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-public-ip
spec:
  rules:
  - http:
      paths:
      - path: /web/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sportapp-web-service
            port:
              number: 80
      - path: /usuario/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sportapp-ms-usuario-service
            port:
              number: 80
      - path: /autenticador/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sportapp-ms-autenticador-service
            port:
              number: 80
